# Fast-Poisson-Image-Editing

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CPPLINT.cfg  MANIFEST.in  Makefile  README.md  ruff.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
.github/workflows_stash/: lint.yml
cmake_modules/: GitUtils.cmake
docs/: backend.md  backend.rst  benchmark.md  benchmark.rst  conf.py  get_start.rst  index.rst  misc.md  report.md  report.rst  spelling_wordlist.txt
docs/_static/images/: plot.py
docs/backend/: README.md
docs/benchmark/: README.md  plot.py
docs/image/: plot.py
docs/report/: README.md
fpie/: __init__.py  args.py  cli.py  gui.py  io.py  np_solver.py  numba_solver.py  process.py  taichi_solver.py
fpie/core/: base_solver.h  solver.h
fpie/core/cuda/: CMakeLists.txt  equ.cu  grid.cu  helper.h  solver.cc  solver.cu  solver.h  util.cu  util.h  utils.cu  utils.h
fpie/core/gcc/: CMakeLists.txt  equ.cc  grid.cc  helper.h  solver.cc  solver.h
fpie/core/mpi/: CMakeLists.txt  equ.cc  grid.cc  helper.h  solver.cc  solver.h
fpie/core/openmp/: CMakeLists.txt  blockrb.cc  equ.cc  grid.cc  helper.h  multisweeprb.cc  solver.cc  solver.h
fpie_env/: pyvenv.cfg
fpie_env/lib/cmake/SPIRV-Tools/: SPIRV-ToolsTarget.cmake
fpie_env/lib/cmake/SPIRV-Tools-diff/: SPIRV-Tools-diffConfig.cmake  SPIRV-Tools-diffTargets-release.cmake
fpie_env/lib/cmake/SPIRV-Tools-lint/: SPIRV-Tools-lintTargets.cmake
fpie_env/lib/cmake/SPIRV-Tools-opt/: SPIRV-Tools-optTargets-release.cmake
fpie_env/lib/cmake/SPIRV-Tools-reduce/: SPIRV-Tools-reduceTarget-release.cmake  SPIRV-Tools-reduceTarget.cmake
fpie_env/share/spirv_cross_c/cmake/: spirv_cross_cConfig.cmake
fpie_env/share/spirv_cross_core/cmake/: spirv_cross_coreConfig.cmake
fpie_env/share/spirv_cross_cpp/cmake/: spirv_cross_cppConfig.cmake
fpie_env/share/spirv_cross_util/cmake/: spirv_cross_utilConfig.cmake
github/wf/: lint.yml
pie/: __init__.py  cli.py  io.py  np_solver.py  process.py  solver.py  taichi_solver.py
pie/core/: solver.h
pie/core/cuda/: CMakeLists.txt  cuda.cc  cuda.cu  cuda.h  equ.cu  grid.cu  helper.cu  helper.h  solver.cc  util.cu  util.h
pie/core/gcc/: CMakeLists.txt  equ.cc  grid.cc  helper.h  solver.cc
pie/core/mpi/: CMakeLists.txt  equ.cc  grid.cc  helper.h  solver.cc
pie/core/naive/: CMakeLists.txt  naive.cc
pie/core/openmp/: CMakeLists.txt  equ.cc  grid.cc  helper.h  openmp.cc  solver.cc
pie/io/: __init__.py  read.py
pie_core/: openmp.cc  pie.cc  solver.h
tests/: .gitignore  data.py  data.sh  data.txt  test_smoke.py
tests/fpie_env/: pyvenv.cfg
